Translation feature ready

--- a/services/i18n/en.json
+++ b/services/i18n/en.json
@@ -45,7 +45,7 @@
     "AGREGAR PRODUCTO": "ADD PRODUCT",
     "Agregar producto": "Add product",
     "Información de producto": "Product information",
-    "Cantidad": "Cantidad",
+    "Cantidad": "Quantity",
     "Descripción": "Description",
     "Actualizar lista": "Update List",
     "Guardar cambios": "Save changes",
