Fix language feature and update help screen

--- a/services/i18n/en.json
+++ b/services/i18n/en.json
@@ -63,6 +63,14 @@
     "Nueva lista": "New List",
     "guardar": "Save",
     "guardar cambios": "Save changes",
-    "Seleccione algo": "Select something"
+    "Seleccione algo": "Select something",
+    "Tu compañero de compras favorito": "Your shopping companion favorite",
+    "Organiza tus compras, enlista productos, compara precios, todo en un solo lugar": "Organize your purchases, list products, compare prices, all in one place",
+    "Necesitas ayuda?": "Need help?",
+    "Listas": "Lists",
+    "Comparaciones": "Comparisons",
+    "Supermercados": "Supermarkets",
+    "Categorias": "Categories",
+    "Contacto": "Contact"
   }
 }
